--- a/04-Arrow-Function/10-calAge/index.html
+++ b/04-Arrow-Function/10-calAge/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,4 +8,26 @@
   </head>
   <body></body>
   <script src="main.js"></script>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Calculate Age in Days</title>
+</head>
+
+<body>
+
+    <h2>Calculate Age in Days</h2>
+
+    <p>Enter your birthdate:</p>
+    <input type="date" id="birthdate">
+    <input type="date" id="todaydate">
+    <button onclick="calculateAge()">Calculate Age</button>
+
+    <p id="result"></p>
+
+</body>
+
 </html>
